# miami-pdf-extractor

./: .gitattributes  .gitignore  Appimage.sh  COLLECT-00.toc  README.md  db.sqlite3  manage.py  miami.spec  pyproject.toml  requirements.txt  run_django.py  url.py
config/: app_config.json  filtros.csv  settings.py  urls.py
extraction/: .env  persistence.py  processor.py  urls.py  views.py
extraction/management/commands/: generate_map.py
scripts/: GenerateAppImage.sh  appimage.sh
static/css/: styles.css
static/js/: script.js
templates/extraction/: instructions.html  interface.html
