[project]
name = "fburo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pdfminer-six>=20260107",
    "waitress>=3.0.2",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
[project.scripts]
miami-extractor = "run_django:run"
